[package]
name = "rust-web3-solana"
version = "0.0.1"
edition = "2021"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
description = "Rust For Web3 and Solana Development Encyclopedia"
repository = "https://github.com/wiseaidev/rust-web3-solana"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Note: this is just a dummy cargo file contains all deps for Dependabot to update 

[dependencies]
borsh = "1.3.1"
solana-client = "1.18.14"
solana-program = "1.18.4"
solana-sdk = "1.18.4"
